# alice

./: Tiltfile  buf.gen.yaml  buf.yaml  go.mod  main.go
cmd/: root.go
memory/: Dockerfile.dev  README.md  Tiltfile  buf.gen.yaml  buf.yaml  buf.yaml_  config.py  flake.nix  main.py  models.py  pyproject.toml
memory/db/: models.py
memory/fetch/: __init__.py  fetch.py
memory/fetch/v1/: fetch.proto  fetch_pb2.py  fetch_pb2.pyi  fetch_pb2_grpc.py
memory/graph/v1/: graph.proto  graph_pb2.py  graph_pb2.pyi
memory/ingest/: __init__.py  ingest.py
memory/ingest/v1/: ingest.proto  ingest_pb2.py  ingest_pb2.pyi  ingest_pb2_grpc.py  jsonschema.proto  jsonschema_pb2.py  jsonschema_pb2.pyi
memory/manifests/: deployment.yaml
memory/migrations/: env.py
memory/migrations/versions/: 1eaa85a18fd4_entities.py
wtr/: Cargo.toml  flake.nix
wtr/src/: main.rs
